@@ -25,6 +25,9 @@
    - stevesk@cvs.openbsd.org 2001/07/08 15:23:38
      [servconf.c]
      fix ``MaxStartups max''; ok markus@
+   - fgsch@cvs.openbsd.org 2001/07/09 05:58:47
+     [ssh.c]
+     Use getopt(3); markus@ ok.
 
 20010711
  - (djm) dirname(3) may modify its argument on glibc and other systems. 
@@ -6000,4 +6003,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1392 2001/07/14 02:17:33 djm Exp $
+$Id: ChangeLog,v 1.1393 2001/07/14 02:18:10 djm Exp $
